provarAnt/00D190000000ZY2EAM/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Leaderboard_Used_Artwork_GM_Packages__c</fullName>
        <label>Leaderboard Used Artwork (GM Packages)</label>
        <picklist>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leaderboard_Used_Artwork__c</fullName>
        <label>Leaderboard Used Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Op Pre-Approval Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make simple logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Co-op Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Dealer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <inlineHelpText>Dealer Ratings Link</inlineHelpText>
        <label>Dealer Ratings Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_kbb__c</fullName>
        <inlineHelpText>KBB Dealer Ratings Link</inlineHelpText>
        <label>KBB Dealer Ratings Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MINIs_Dealer_Center_ID__c</fullName>
        <label>MINI&apos;s Dealer Center ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MINIs_Location_ID__c</fullName>
        <label>MINI&apos;s Location ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Make_with_Any_Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Any Make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_CRM_System__c</fullName>
        <label>Name of CRM System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Contact_Email__c</fullName>
        <inlineHelpText>OEM Specials New Car Contact Email</inlineHelpText>
        <label>New Car Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Car_Inventory_Source__c</fullName>
        <label>New Car Inventory Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other Inventory Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMENET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMDATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARSFORSALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EARTHCARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOUPLINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBIZAUTOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <label>New Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_reimbursable_amount__c</fullName>
        <label>Non-reimbursable amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Id__c</fullName>
        <label>OEM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Co_op_Submission_CPO__c</fullName>
        <label>Opt-Out Co-op Submission CPO</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out of Automated Co-op Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Co_op_Submission__c</fullName>
        <label>Opt-Out Co-op Submission</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out of Automated Co-op Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out of OEM Graphics &amp; Automated Co-op Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Line_Label__c</fullName>
        <formula>Product_Name__c &amp; 
if( NOT(ISPICKVAL(Spotlight_Make__c,&quot;&quot;)),&quot; - &quot; &amp; TEXT(Spotlight_Make__c),&quot;&quot;) &amp;
if( NOT(ISPICKVAL(Spotlight_Duration__c,&quot;&quot;)),&quot; - &quot; &amp; TEXT(Spotlight_Duration__c),&quot;&quot;) &amp;
if( Spotlight_Quantity__c = 0, null, &quot; - Quantity: &quot; &amp; TEXT(Spotlight_Quantity__c)) &amp;
if( NOT(ISPICKVAL(DMA__c,&quot;&quot;)),&quot; - &quot; &amp; TEXT(DMA__c),&quot;&quot;) &amp;
if( AND(NOT(ISPICKVAL(Zone__c,&quot;Not Applicable&quot;)),NOT(ISPICKVAL(Zone__c,&quot;&quot;))),&quot; - &quot; &amp; TEXT(Zone__c),&quot;&quot;) &amp;
if( NOT(ISPICKVAL(Make__c,&quot;&quot;)),&quot; - &quot; &amp; TEXT(Make__c),&quot;&quot;) &amp;
if( NOT(ISPICKVAL(Make_with_Any_Make__c,&quot;&quot;)),&quot; - &quot; &amp; TEXT(Make_with_Any_Make__c),&quot;&quot;) &amp;
if( ISPICKVAL(Full_Rate_Below_Rate__c,&quot;Full Rate&quot;),&quot; - &quot; &amp; TEXT(Full_Rate_Below_Rate__c),&quot;&quot;) &amp;
if( ISPICKVAL(Full_Rate_Below_Rate__c,&quot;Below Rate&quot;),&quot; - &quot; &amp; TEXT(Full_Rate_Below_Rate__c),&quot;&quot;) &amp;
if( ISBLANK(Haystak_URL__c),NULL,&quot; - URL: &quot; &amp; Haystak_URL__c) &amp;
if( Monthly_Advertising_Budget__c = 0, null, &quot; - Advertising Budget: $&quot; &amp; TEXT(Monthly_Advertising_Budget__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Line #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Summary_PT1__c</fullName>
        <formula>IF(ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Geography__c ),&quot;&quot;, &quot; - &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Summary PT1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Summary_PT2__c</fullName>
        <formula>IF(CONTAINS(&quot;GM New Car Featured Plus 2012,GM New Car Premium Plus 2014,GM New Car Premium Max 2014,GM Certified Premium Plus 2012,GM Certified Premium Max 2012,Premium Core 2012,Premium 2012,Premium Plus 2012,Premium Plus with CPO,Premium Max 2012,Premium Max with CPO,GM Certified/New Premium Complete 2014&quot;, Product_Name__c),
IF(Product_Name__c = &quot;GM Certified/New Premium Complete 2014&quot;, &quot; - Used: &quot;, &quot; - &quot;) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_1__c  ),NULL, QuoteLineItem.Rate_Card_Detail__r.Make_1__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_1__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_1__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_2__c  ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_2__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_2__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_2__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_3__c  ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_3__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_3__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_3__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_4__c ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_4__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_4__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_4__c), NULL) &amp;
IF(Product_Name__c = &quot;GM Certified/New Premium Complete 2014&quot;, &quot; - New: &quot;, &quot;&quot;) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_5__c  ),NULL, QuoteLineItem.Rate_Card_Detail__r.Make_5__c) &amp;
IF( QuoteLineItem.Rate_Card_Detail__r.Quantity_5__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_5__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_6__c  ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_6__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_6__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_6__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_7__c  ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_7__c) &amp;
IF( QuoteLineItem.Rate_Card_Detail__r.Quantity_7__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_7__c), NULL) &amp;
IF( ISBLANK( QuoteLineItem.Rate_Card_Detail__r.Make_8__c  ),NULL, &quot;, &quot; &amp; QuoteLineItem.Rate_Card_Detail__r.Make_8__c) &amp;
IF(  QuoteLineItem.Rate_Card_Detail__r.Quantity_8__c != 0, &quot;:&quot; &amp; text(QuoteLineItem.Rate_Card_Detail__r.Quantity_8__c), NULL), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Summary PT2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <inlineHelpText>OEM Specials Other Email</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Porsche_Dealer_Code__c</fullName>
        <label>Porsche Dealer Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porsche_Inventory_Quantity__c</fullName>
        <label>Porsche Inventory Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PremiumTest__c</fullName>
        <formula>Premium_Data__r.Order_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Fields Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premium Data</label>
        <referenceTo>Package_Configuration__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <inlineHelpText>OEM Specials Primary Contact Email</inlineHelpText>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <inlineHelpText>Dealer Ratings Provider</inlineHelpText>
        <label>Dealer Ratings Provider</label>
        <picklist>
            <picklistValues>
                <fullName>CitySearch.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerRater.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kudzu.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_kbb__c</fullName>
        <inlineHelpText>KBB Dealer Ratings Provider</inlineHelpText>
        <label>KBB Dealer Ratings Provider</label>
        <picklist>
            <picklistValues>
                <fullName>DealerRater.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Direct_KBB_Showcase__c</fullName>
        <inlineHelpText>KBB Showcase Call Tracking Re-Direct</inlineHelpText>
        <label>KBB Showcase Call Tracking Re-Direct</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Re_Direct_Used_KBB__c</fullName>
        <inlineHelpText>KBB Call Tracking Used Re-Direct</inlineHelpText>
        <label>KBB Call Tracking Used Re-Direct</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Re_Direct_new__c</fullName>
        <inlineHelpText>Call Tracking New Re-Direct</inlineHelpText>
        <label>Call Tracking New Re-Direct</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Re_Direct_new_kbb__c</fullName>
        <inlineHelpText>KBB Call Tracking New Re-Direct</inlineHelpText>
        <label>KBB Call Tracking New Re-Direct</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Re_Direct_used__c</fullName>
        <inlineHelpText>Call Tracking Used Re-Direct</inlineHelpText>
        <label>Call Tracking Used Re-Direct</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Replace_Current_Spotlights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace Current Spotlights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_1__c</fullName>
        <label>Report Recipients Email Address 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_2__c</fullName>
        <label>Report Recipients Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_3__c</fullName>
        <label>Report Recipients Email Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_1__c</fullName>
        <label>Report Recipients Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_2__c</fullName>
        <label>Report Recipients Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_3__c</fullName>
        <label>Report Recipients Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCA_Artwork__c</fullName>
        <label>SCA Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Enclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make simple logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Dealer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Pro_OPT_IN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Pro OPT IN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_URL__c</fullName>
        <label>Sitelink New URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Use_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Use Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Pro_OPT_IN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Pro OPT IN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_URL__c</fullName>
        <label>Sitelink Used URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Use_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Use Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Buckets__c</fullName>
        <label>Skyscrapers Buckets</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Co_Op_Artwork_GM_Packages__c</fullName>
        <label>Skyscrapers Co-Op Artwork (GM Packages)</label>
        <picklist>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Co_Op_Artwork__c</fullName>
        <label>Skyscrapers Co-Op Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Op Pre-Approval Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS/DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Co-op Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM New Car Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use GM Used Car Templates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Slots__c</fullName>
        <label>Skyscrapers Slots</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotlight_Duration__c</fullName>
        <label>Spotlight Duration</label>
        <picklist>
            <picklistValues>
                <fullName>4 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotlight_Make__c</fullName>
        <label>Spotlight Make</label>
        <picklist>
            <picklistValues>
                <fullName>All Makes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotlight_Quantity__c</fullName>
        <label>Spotlight Quantity Enter Multiples of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIM_Dealer_Website_Address__c</fullName>
        <label>TIM Dealer Website Address</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Email_Address__c</fullName>
        <label>TIM Dealership Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Mobile_Carrier__c</fullName>
        <label>TIM Dealership Contact Mobile Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Mobile_Number__c</fullName>
        <label>TIM Dealership Contact Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact__c</fullName>
        <inlineHelpText>Will be listed on website.</inlineHelpText>
        <label>TIM Dealership Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_phone__c</fullName>
        <label>TIM Dealership Contact phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_title__c</fullName>
        <label>TIM Dealership Contact title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_XML_Email_Address__c</fullName>
        <label>TIM Dealership XML Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <label>Technical Contact E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Phone__c</fullName>
        <label>Technical Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Term_Duration_12_Months__c</fullName>
        <label>Term Duration (12 Months)</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>